<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.trackrate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.trackrate.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.trackrate.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.trackrate.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.trackrate.ui.profile.ProfileFragment"
        android:label="@string/settings_profile_title">
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.trackrate.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile_title" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.trackrate.ui.auth.ChangePasswordFragment"
        android:label="@string/change_password_title" />

    <fragment
        android:id="@+id/nav_submissions"
        android:name="com.example.trackrate.ui.moderation.SubmissionsFragment"
        android:label="@string/submissions_title" />

    <fragment
        android:id="@+id/nav_lists"
        android:name="com.example.trackrate.ui.lists.ListsFragment"
        android:label="@string/lists_title" />

    <fragment
        android:id="@+id/nav_list_detail"
        android:name="com.example.trackrate.ui.lists.ListDetailFragment"
        android:label="@string/lists_title">
        <argument
            android:name="listId"
            app:argType="string" />
        <argument
            android:name="listTitle"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_moderation_options"
        android:name="com.example.trackrate.ui.moderation.ModerationOptionsFragment"
        android:label="@string/moderation_options_title" />

    <fragment
        android:id="@+id/nav_moderation"
        android:name="com.example.trackrate.ui.moderation.ModerationFragment"
        android:label="@string/moderation_title" />

    <fragment
        android:id="@+id/nav_moderation_review"
        android:name="com.example.trackrate.ui.moderation.ModerationReviewFragment"
        android:label="@string/moderation_review_title">
        <argument
            android:name="entityType"
            app:argType="string" />
        <argument
            android:name="entityId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_admin_users"
        android:name="com.example.trackrate.ui.admin.AdminUsersFragment"
        android:label="@string/admin_users_title" />

    <fragment
        android:id="@+id/nav_labels"
        android:name="com.example.trackrate.ui.labels.LabelsFragment"
        android:label="@string/labels_title" />
</navigation>
